--- a/Homework_3/service.yaml
+++ b/Homework_3/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hw3-service
+  name: hw3app-service
   labels:
-    app: hw3-svc
+    app: hw3app-svc
 spec:
   selector:
     app: hw3app
