--- a/Homework_7/BillingService/dockerfile
+++ b/Homework_7/BillingService/dockerfile
@@ -1,11 +1,10 @@
-# Use the official OpenJDK image
-FROM openjdk:17-jdk-slim
+FROM bellsoft/liberica-openjdk-alpine-musl
 
 # Set the working directory
 WORKDIR /app
 
 # Copy the JAR file
-COPY target/NotificationService-3.0-SNAPSHOT.jar app.jar
+COPY target/BillingService-3.0-SNAPSHOT.jar app.jar
 
 # Expose the port
 EXPOSE 8080
