--- a/Homework_7/BillingService/src/main/resources/application.yaml
+++ b/Homework_7/BillingService/src/main/resources/application.yaml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: "HW7 Billing application"
   datasource:
     url: jdbc:h2:mem:billingdb
     username: sa
@@ -18,4 +20,4 @@ spring:
       path: /h2-console
 
 server:
-  port: 8081
+  port: 8080
