--- a/Homework_7/OrderService/dockerfile
+++ b/Homework_7/OrderService/dockerfile
@@ -5,7 +5,7 @@ FROM openjdk:17-jdk-slim
 WORKDIR /app
 
 # Copy the JAR file
-COPY target/NotificationService-3.0-SNAPSHOT.jar app.jar
+COPY target/OrderService-3.0-SNAPSHOT.jar app.jar
 
 # Expose the port
 EXPOSE 8080
