[Project] Доработки потоков заявок от Order к Trade.

--- a/Project/Ex_Trade/src/main/resources/application.yml
+++ b/Project/Ex_Trade/src/main/resources/application.yml
@@ -16,3 +16,9 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
+
+mq:
+  sell:
+    queue: /queue/trade/inbound/order/sell
+  buy:
+    queue: /queue/trade/inbound/order/buy
